address Danielle's comments
